add JVM tunning